--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,19 +1,8 @@
-<!doctype html>
+{% extends 'base.html.twig' %}
 
-<html lang="en">
+{% block body %}
+	<h1>Bienvenue</h1>
+{% endblock %}
 
-	<head>
-
-		<meta charset="UTF-8">
-
-		<title>Wild Series</title>
-
-	</head>
-
-	<body>
-
-		<h1>Bienvenu</h1>
-
-	</body>
-
-</html>
+{% block title %}Wild Series
+{% endblock %}
