--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -1,20 +1,7 @@
-<!doctype html>
+{% extends 'base.html.twig' %}
 
-<html lang="en">
+{% block title %}Wild Series{% endblock %}
 
-	<head>
-
-		<meta charset="UTF-8">
-
-		<title>Wild Series</title>
-
-	</head>
-
-	<body>
-
-		<h1>{{ website }}
-			index</h1>
-
-	</body>
-
-</html>
+{% block body %}
+<h1>{{ website }} index</h1>
+{% endblock %}
