--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,6 +1,11 @@
 
 @import "~bootstrap/scss/bootstrap";
 
+
 body {
-    background-color: rgb(219, 91, 17);
+    background-color: rgb(233, 226, 222);
+}
+
+.navbar  {
+    background-color: red;
 }
