--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,17 +1,26 @@
-<nav class="navbar navbar-expand-lg bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Wild séries</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">Catégories</a>
-        <a class="nav-link" href="#">Acteurs</a>
-        <a class="nav-link" href="#">Favoris</a>       
-        <a class="nav-link disabled">Disabled</a>       
-      </div>
-    </div>
-  </div>
+<nav class="navbar navbar-expand-lg ">
+	<div class="container-fluid">
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<a class="navbar-brand text-white" href="#">Wild Séries</a>
+		<div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				<li class="nav-item">
+					<a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link text-white" href="#">Actors</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link text-white" href="#">Favoris</a>
+				</li>
+			</ul>
+			<ul class="d-flex my-2" role="search">
+				<li class="nav-item list-unstyled">
+					<a class="nav-link text-white" href="#">Login</a>
+				</li>
+			</ul>
+		</div>
+	</div>
 </nav>
