--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg ">
+<nav class="navbar navbar-expand-lg bg-primary">
 	<div class="container-fluid">
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -16,7 +16,7 @@
 					<a class="nav-link text-white" href="#">Favoris</a>
 				</li>
 			</ul>
-			<ul class="d-flex my-2" role="search">
+			<ul class="d-flex">
 				<li class="nav-item list-unstyled">
 					<a class="nav-link text-white" href="#">Login</a>
 				</li>
