--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,11 +1,17 @@
+$primary: rgb(255, 60, 0); //scss me permet de déclarer ma variable avec $ puis me la compile dans build en css
+
 // scsslanguage css amélioré(for) -> compile css dans public/build 
 @import "~bootstrap/scss/bootstrap";
 
+* {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
 
 body {
+    
     background-color: rgb(233, 226, 222);
 }
 
-.navbar  {
-    background-color: red;
-}
+/* .navbar  {
+    background-color: $primary;
+} */
