--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -7,13 +7,13 @@
 		<div class="collapse navbar-collapse" id="navbarTogglerDemo03">
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 				<li class="nav-item">
-					<a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+					<a class="nav-link active text-white" aria-current="page" href="/">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link text-white" href="#">Actors</a>
+					<a class="nav-link text-white" href="/category">Catégorie</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link text-white" href="#">Favoris</a>
+					<a class="nav-link text-white" href="/program">Film/Série</a>
 				</li>
 			</ul>
 			<ul class="d-flex">
