--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -3,25 +3,24 @@
 {% block title %}All programs
 {% endblock %}
 
-
 {% block body %}
 
-	<h1>Toutes les films et séries disponible :
+	<h1>Toutes les catégories disponible :
 	</h1>
 
-	{% for program in programs %}
+	{% for category in categories %}
 
 		<div>
 
 			<h2>{{ loop.index }}
 				/
-				{{ program.title }}
+				
 				- Catégorie :
-				{{ program.category.name }}</h2>
+				{{ category.name }}</h2>
 
-			<p>{{ program.synopsis }}</p>
+			
 
-			<a href="{{ path("program_show", { id: program.id }) }}">Voir la fiche</a>
+			<a href="{{ path("category_show", { categoryName: category.name }) }}">Voir la fiche</a>
 
 		</div>
 
