--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -1,7 +1,43 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Wild Series{% endblock %}
+{% block title %}Série #{{ program.id }}
+{% endblock %}
+
 
 {% block body %}
-<h1>Wild Série : {{ id }}</h1> {# {{ id }} = renvoie mon parametre(id) } #}
+
+	<div class="media">
+
+		<img class="align-self-start mr-3" src="{{program.poster}}" alt="{{ program.title }} poster">
+
+		<div class="media-body">
+
+			<h1 class="mt-0">{{ program.title }}</h1>
+
+			<p>{{ program.synopsis }}</p>
+
+			<p>Catégorie :
+				{{ program.category.name }}</p>
+
+			<ul>
+				{% for season in program.seasons %}
+					<li>{{ season.number }}
+						//
+						<a href={{ path("program_season_show", {programId: program.id, seasonId: season.id } ) }}>Voir saison</a>
+					</li>
+				{% endfor %}
+			</ul>
+
+
+		</div>
+
+	</div>
+
+
+	<a href="{{ path('program_index') }}">
+
+		Retour à la liste des programmes
+
+	</a>
+
 {% endblock %}
