--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -22,8 +22,8 @@
 			<ul>
 				{% for season in program.seasons %}
 					<li>{{ season.number }}
-						//
-						<a href={{ path("program_season_show", {programId: program.id, seasonId: season.id } ) }}>Voir saison</a>
+						
+						<a href={{ path("program_season_show", {programId: program.id, seasonId: season.id } ) }}>Voir : </a>
 					</li>
 				{% endfor %}
 			</ul>
