--- a/templates/program/season_show.html.twig
+++ b/templates/program/season_show.html.twig
@@ -20,7 +20,8 @@
 			<ul>
 				{% for episode in season.episodes %}
 					<li>{{loop.index}}-- Titre :
-						{{episode.title}}</li>
+						{{episode.title}}-- Synopsis :
+						{{episode.Synopsis}}</li>
 				{% endfor %}
 			</ul>
 
