--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -23,7 +23,7 @@
 				{% for season in program.seasons %}
 					<li>{{ season.number }}
 						
-						<a href={{ path("program_season_show", {programId: program.id, seasonId: season.id } ) }}>Voir : </a>
+						<a href={{ path("program_season_show", {programId: program.id, seasonId: season.id } ) }}>Voir la saison :{{ season.number}} </a>
 					</li>
 				{% endfor %}
 			</ul>
