--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,13 @@
 	</head>
 	<body>
 		<header>{% include '_navbar.html.twig' %}</header>
+		{% for category, messages in app.flashes %}
+			{% for message in messages %}
+				<div class="bg-primary alert alert-{{ category }} text-{{category}}">
+					{{ message }}
+				</div>
+			{% endfor %}
+		{% endfor %}
 		{% block body %}{% endblock %}
 	</body>
 </html>
