--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -22,22 +22,29 @@
 			<ul>
 				{% for season in program.seasons %}
 					<li>{{ season.number }}
-						
-						<a href={{ path("program_season_show", {program: program.id, season: season.id } ) }}>Voir la saison :{{ season.number}} </a>
+
+						<a href={{ path("program_season_show", {program: program.id, season: season.id } ) }}>Voir la saison :{{ season.number}}
+						</a>
 					</li>
 				{% endfor %}
 			</ul>
-
-
+			<div>
+				<strong>Acteurs :</strong>
+				<ul>
+					{% for actor in program.actors %}
+						<li>
+							<a href={{ path('actor_show', { id: actor.id } ) }}>{{ actor.name }}</a>
+						</li>
+					{% else %}
+						<li>Aucun acteur pour cette série</li>
+					{% endfor %}
+				</ul>
+			</div>
+			<a href="{{ path('program_index') }}">
+				Retour à la liste des programmes
+			</a>
+			<a class="btn btn-succes" href="{{ path('program_edit', {'id': program.id}) }}">edit</a>
+			{{ include('program/_delete_form.html.twig') }}
 		</div>
-
 	</div>
-
-
-	<a href="{{ path('program_index') }}">
-
-		Retour à la liste des programmes
-
-	</a>
-
 {% endblock %}
