--- a/templates/actor/show.html.twig
+++ b/templates/actor/show.html.twig
@@ -17,7 +17,7 @@
 				<p>{{ program.synopsis }}</p>
 				<p>Catégorie :
 					{{ program.category.name }}</p>
-				<a href="{{ path("program_show", { id: program.id }) }}">Voir la fiche</a>
+				<a href="{{ path("program_show", { slug: program.slug }) }}">Voir la fiche</a>
 			</div>
 		</div>
 	{% else %}
