--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,8 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
-	<h1>Bienvenue</h1>
-{% endblock %}
-
 {% block title %}Wild Series
 {% endblock %}
+
+{% block body %}
+	<img class="w-100 position-relative" src="{{ asset('build/images/bvn.webp') }}"></img>
+<div class="position-absolute top-50 start-50 translate-middle d-flex flex-column justify-content-center align-items-center">
+	<h1 class="header-text display-1 text-center mb-4 text-light">Toutes vos séries réunis au même endroit</h1>
+	<a href="#" class="btn btn-primary p-3 px-5 mt-5">Inscrivez-vous</a>
+</div>{% endblock %}
