--- a/templates/program/episode_show.html.twig
+++ b/templates/program/episode_show.html.twig
@@ -5,10 +5,8 @@
 
 
 {% block body %}
-
 	<div class="media">
-
-		<img class="align-self-start mr-3" src="{{program.poster}}" alt="{{ program.title }} poster">
+		<img class="align-self-start mr-3" src="{{ asset('build/images/placeholder.jpeg') }}"alt="{{ program.title }} poster">
 
 		<div class="media-body">
 
