--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -3,27 +3,19 @@
 {% block title %}Série #{{ program.id }}
 {% endblock %}
 
-
 {% block body %}
 
 	<div class="media">
-
-		<img class="align-self-start mr-3" src="{{program.poster}}" alt="{{ program.title }} poster">
-
+		<img class="align-self-start mr-3" src="{{ asset('build/images/placeholder.jpeg') }}" alt="{{ program.title }} poster">
 		<div class="media-body">
-
 			<h1 class="mt-0">{{ program.title }}</h1>
-
 			<p>{{ program.synopsis }}</p>
-
 			<p>Catégorie :
 				{{ program.category.name }}</p>
-
 			<ul>
 				{% for season in program.seasons %}
 					<li>{{ season.number }}
-
-						<a href={{ path("program_season_show", {program: program.id, season: season.id } ) }}>Voir la saison :{{ season.number}}
+						<a href={{ path("program_season_show", {"slug": program.slug, "season": season.id } ) }}>Voir la saison :{{ season.number}}
 						</a>
 					</li>
 				{% endfor %}
@@ -40,11 +32,15 @@
 					{% endfor %}
 				</ul>
 			</div>
-			<a href="{{ path('program_index') }}">
-				Retour à la liste des programmes
-			</a>
-			<a class="btn btn-succes" href="{{ path('program_edit', {'id': program.id}) }}">edit</a>
-			{{ include('program/_delete_form.html.twig') }}
+			<div class="mt-3">
+				<p class="text-subtitle fs-3">Durée totale de la série :</p>
+				<p>{{ programDuration }}</p>
+			</div>
 		</div>
+		<a href="{{ path('program_index') }}">
+			Retour à la liste des programmes
+		</a>
+		<a class="btn btn-succes" href="{{ path('program_edit', {'id': program.id}) }}">edit</a>
+		{{ include('program/_delete_form.html.twig') }}
 	</div>
-{% endblock %}
+</div>{% endblock %}
