--- a/templates/season/index.html.twig
+++ b/templates/season/index.html.twig
@@ -3,28 +3,24 @@
 {% block title %}Season index{% endblock %}
 
 {% block body %}
+<main class="container">
     <h1>Season index</h1>
 
-    <table class="table">
-        <thead>
+    <table class="table table-hover">
+        <thead class="bg-primary">
             <tr>
-                <th>Id</th>
-                <th>Number</th>
-                <th>Year</th>
-                <th>Description</th>
-                <th>actions</th>
+                <th>Numero</th>
+                <th>Année</th>
+                <th>action</th>
             </tr>
         </thead>
         <tbody>
         {% for season in seasons %}
             <tr>
-                <td>{{ season.id }}</td>
                 <td>{{ season.number }}</td>
                 <td>{{ season.year }}</td>
-                <td>{{ season.description }}</td>
                 <td>
-                    <a href="{{ path('app_season_show', {'id': season.id}) }}">show</a>
-                    <a href="{{ path('app_season_edit', {'id': season.id}) }}">edit</a>
+                    <a class="btn btn-primary btn-sm" href="{{ path('app_season_edit', {'id': season.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
@@ -35,5 +31,6 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_season_new') }}">Create new</a>
+    <a class="btn btn-primary" href="{{ path('app_season_new') }}">Create new</a>
+    </main>
 {% endblock %}
