--- a/templates/season/new.html.twig
+++ b/templates/season/new.html.twig
@@ -1,11 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Season{% endblock %}
+{% block title %}New Season
+{% endblock %}
 
 {% block body %}
-    <h1>Create new Season</h1>
+	<main class="container">
+		<h1>Creer une saison</h1>
 
-    {{ include('season/_form.html.twig') }}
+		{{ include('season/_form.html.twig') }}
 
-    <a href="{{ path('app_season_index') }}">back to list</a>
+		<a class="btn btn-primary" href="{{ path('app_season_index') }}">back to list</a>
+	</main>
 {% endblock %}
